Auto message sends Firstname + 1

--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,9 @@
 </head>
 
 <body>
-    <label for="message">Enter your message:</label>
-    <input type="text" id="message" name="message" placeholder="Type here">
+    <h1>Start sending first message</h1>
 
-    <button id="sendMessage">Send</button>
+    <button id="sendMessage">Start</button>
 
     <script src="popup.js"></script>
 
